app/assets/stylesheets/home.css.scss
@import 'colors';
@import 'mixins';


.help {
  @include comicSans;
  font-weight: bold;
}

.logo {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 99;
}

.logo-container {
  min-height: 100px;
}

.links-group {

  padding-top: 15px;

  a {
    color: blue;
    border-bottom: 1px solid blue;

    &:hover {
      text-decoration: none;
    }

    &:after {
      content: '|';
      padding: 0 5px;
      color: black;
      text-decoration: none !important;
      border-bottom: 1px solid $aqua;
    }

    &:last-child:after {
      content: ' &nbsp;';
      padding: 0 !important;
    }
  }
}

.image-block {
  position: absolute;
  z-index: 100;
  @include transition(all, 0.2s, ease-in-out);
}

.beta-block {
  right: -20px;
  top: -20px;
}

@-webkit-keyframes spinnerRotate
{
    from{-webkit-transform:rotate(0deg);}
    to{-webkit-transform:rotate(360deg);}
}
@-moz-keyframes spinnerRotate
{
    from{-moz-transform:rotate(0deg);}
    to{-moz-transform:rotate(360deg);}
}
@-ms-keyframes spinnerRotate
{
    from{-ms-transform:rotate(0deg);}
    to{-ms-transform:rotate(360deg);}
}

.beta-block:hover {
    -webkit-animation-name: spinnerRotate;
    -webkit-animation-duration: 0.5s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-name: spinnerRotate;
    -moz-animation-duration: 0.5s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: linear;
    -ms-animation-name: spinnerRotate;
    -ms-animation-duration: 0.5s;
    -ms-animation-iteration-count: infinite;
    -ms-animation-timing-function: linear;
}


.as-seen-on-rr {
  top: 50px;
  left: 50px;
  width: 80px;
  z-index: 101;
  border: 4px solid purple;

    @include animationconfig(shake, 0.8s, infinite, linear);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

.please-vote {
  top: 0px;
  left: 20px;
  background: blue;
  color: yellow;
  font-family: "Comic Sans MS", cursive, sans-serif;
  z-index: 999;
  height: 30px;
  font-size: 20px;
}

.video-block {
  top: -20px;
  left: 30px;
}

.video-tag-block {
  top: -77px;
  left: 72px;
  width: 370px;
  height: 400px;
  -webkit-filter: opacity(0.9) hue-rotate(320deg);
  filter: opacity(0.9) hue-rotate(320deg);
}

.sm-block {
  left: 30px;
  bottom: -30px;
  width: 300px;

  &:hover {
    bottom: -10px;
    left: 50px;
    width: 200px;
  }
}

.try-now-block {
  right: 30px;
  bottom: 0px;
  width: 450px;

  &:hover {
    width: 470px;
    right: 20px;
  }
}

.third-row {
  min-height: 400px;
}

.fax-machines-block {
  top: 50px;
  left: 0px;
  border: 3px solid blue;

  &:hover {
    border: 4px solid yellow;
  }
}

.how-it-works-block {
  right: 0;
  top: 0px;
  @include transform(skew(0deg,0deg));

  &:hover {
    @include transform(skew(5deg,1deg));
  }
}

.mobile-block {
  left: -20px;
  top: -10px;
}

.fourth-row {
  height: 450px;
}

